# surena

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: design.md
includes/surena/: command_interface.hpp  engine.h  engine.hpp  engine_plugin.h  game.h  game.hpp  game_decldef.h  game_funused.h  game_gftypes.h  game_impl.h  game_plugin.h  move_history.h
includes/surena/engines/: randomengine.h  randomengine.hpp  singlethreadedmcts.hpp  uci_wrap.h
includes/surena/games/: alhambra.hpp  caesar.hpp  chess.h  chess.hpp  havannah.h  havannah.hpp  oshisumo.h  oshisumo.hpp  quasar.h  rockpaperscissors.h  tictactoe.h  tictactoe.hpp  tictactoe_ultimate.h  tictactoe_ultimate.hpp  twixt_pp.h
includes/surena/util/: base64.h  fast_prng.h  fast_prng.hpp  noise.h  noise.hpp  raw_stream.h  semver.h  serialization.h  timestamp.h
src/: command_interface.hpp  engine.cpp  engine.hpp  game.c  game.cpp  game.hpp  main.cpp  move_history.c  repl.c  test_plugin.cpp
src/engines/: randomengine.cpp  randomengine.hpp  singlethreadedmcts.cpp  singlethreadedmcts.hpp  uci_wrap.cpp
src/games/: alhambra.cpp  alhambra.hpp  alhambra.md  caesar.cpp  caesar.hpp  caesar.md  chess.cpp  cpp_boilerplate.md  havannah.cpp  havannah.hpp  oshisumo.cpp  quasar.cpp  rockpaperscissors.cpp  tictactoe.cpp  tictactoe.hpp  tictactoe_ultimate.cpp  twixt_pp.cpp
src/util/: base64.c  fast_prng.c  fast_prng.cpp  fast_prng.hpp  noise.c  noise.cpp  raw_stream.c  semver.c  serialization.c  timestamp.c
